# osiris

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  LICENSE-APACHE2  LICENSE-MPL-RabbitMQ  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  erlang.mk  rebar.config
.bcr/: metadata.template.json  source.template.json
.github/workflows/: erlang.yml  publish-rabbitmq-bcr.yml  rabbitmq-oci.yaml  release.yml
src/: osiris.app.src  osiris.erl  osiris.hrl  osiris_app.erl  osiris_array.erl  osiris_bench.erl  osiris_bloom.erl  osiris_competing_read_coordinator.erl  osiris_counters.erl  osiris_ets.erl  osiris_file.erl  osiris_file_default.erl  osiris_log.erl  osiris_log.hrl  osiris_log_idx.erl  osiris_log_manifest.erl  osiris_log_read.erl  osiris_log_reader.erl  osiris_log_shared.erl  osiris_member.erl  osiris_peer_shim.hrl  osiris_proc.erl  osiris_replica.erl  osiris_replica_reader.erl  osiris_replica_reader_sup.erl  osiris_replica_sup.erl  osiris_retention.erl  osiris_s3_file_server.erl  osiris_s3_io_server.erl  osiris_segment.erl  osiris_segment_reader.erl  osiris_server_sup.erl  osiris_server_sup_sup.erl  osiris_sup.erl  osiris_tracking.erl  osiris_util.erl  osiris_writer.erl  osiris_writer_sup.erl
test/: osiris_SUITE.erl  osiris_bloom_SUITE.erl  osiris_log_SUITE.erl  osiris_replica_SUITE.erl  osiris_segment_SUITE.erl  osiris_tracer.erl  osiris_tracking_SUITE.erl  osiris_util_SUITE.erl
test/osiris_SUITE_data/tls/: ca_certificate.pem  ca_key.pem  client_certificate.pem  client_key.pem  server_certificate.pem  server_key.pem
test/osiris_util_SUITE_data/: inter_node_tls_broken.config  inter_node_tls_client_server_ok.config  inter_node_tls_server_client_ok.config
tla/: OsirisMsgPassing.tla
tla/OsirisMsgPassing.toolbox/: .project  OsirisMsgPassing___OsirisSafety.launch
tla/OsirisMsgPassing.toolbox/OsirisSafety/: MC.cfg  MC.tla  OsirisMsgPassing.tla
