load("@rules_erlang//:xref2.bzl", "xref")
load("@rules_erlang//:dialyze.bzl", "DEFAULT_PLT_APPS", "dialyze", "plt")
load("@rules_erlang//compat:erlang_mk.bzl", "app_src_from_erlang_mk_makefile")
load("@rules_erlang//:erlc_opts_file.bzl", "erlc_opts_file")
load("@rules_erlang//:erlang_app_sources.bzl", "erlang_app_sources")
load("@rules_erlang//:compile_many.bzl", "compile_many")
load("@rules_erlang//private:extract_app.bzl", "extract_app")
load("@rules_erlang//:eunit2.bzl", "eunit")
load("@rules_erlang//:ct.bzl", "assert_suites2", "ct_suite")

NAME = "osiris"

VERSION = module_version()

DESCRIPTION = "Foundation of the log-based streaming subsystem for RabbitMQ"

APP_ENV = """[
	{data_dir, "/tmp/osiris"},
	{port_range, {6000, 6500}},
	{max_segment_size_chunks, 256000},
	{replication_transport, tcp},
	{replica_forced_gc_default_interval, 4999}
]"""

EXTRA_APPS = [
    "sasl",
    "crypto",
]

DEPS = [
    "@gen_batch_server//:erlang_app",
]

RUNTIME_DEPS = [
    "@seshat//:erlang_app",
]

# erlang_app(
#     app_description = DESCRIPTION,
#     app_env = APP_ENV,
#     app_name = NAME,
#     app_version = VERSION,
#     extra_apps = EXTRA_APPS,
#     runtime_deps = RUNTIME_DEPS,
#     deps = DEPS,
# )

# test_erlang_app(
#     app_description = DESCRIPTION,
#     app_env = APP_ENV,
#     app_name = NAME,
#     app_version = VERSION,
#     extra_apps = EXTRA_APPS,
#     runtime_deps = RUNTIME_DEPS,
#     deps = DEPS,
# )

xref()

PLT_APPS = DEFAULT_PLT_APPS + [
    "compiler",
    "crypto",
    "tools",
    "runtime_tools",
    "mnesia",
    "public_key",
    "asn1",
    "ssl",
    "inets",
]

plt(
    name = "deps_plt",
    apps = PLT_APPS,
    for_target = ":erlang_app",
)

dialyze(
    name = "dialyze",
    size = "small",
    dialyzer_opts = [
        "-Werror_handling",
        "-Wunmatched_returns",
    ],
    plt = ":deps_plt",
    target = ":erlang_app",
)

plt(
    name = "test_deps_plt",
    apps = PLT_APPS + [
        "eunit",
        "common_test",
        "debugger",
        "xmerl",
        "ftp",
        "ssh",
        "snmp",
        "wx",
        "syntax_tools",
    ],
    for_target = ":test_erlang_app",
)

dialyze(
    name = "dialyze_tests",
    size = "small",
    beam = [
        f.replace("test/", "").replace(".erl", "_beam_files")
        for f in glob(["test/*_SUITE.erl"])
    ],
    dialyzer_opts = [
        "-Werror_handling",
        "-Wunmatched_returns",
    ],
    plt = ":test_deps_plt",
)

eunit(
    name = "eunit",
    eunit_opts = [
        "no_tty",
        "{report, {eunit_progress, [colored, profile]}}",
    ],
    target = ":test_erlang_app",
    deps = [
        "@eunit_formatters//:erlang_app",
    ],
)

[ct_suite(
    name = f.replace("test/", "").replace(".erl", ""),
) for f in glob(
    ["test/*_SUITE.erl"],
    exclude = ["test/osiris_SUITE.erl"],
)]

ct_suite(
    name = "osiris_SUITE",
    data = [
        "@tls_gen//:basic",
    ],
    test_env = {
        "DEPS_DIR": "$TEST_SRCDIR/$TEST_WORKSPACE/external",
    },
)

assert_suites2()

compile_many(
    name = "deps",
    apps = [
        "@eunit_formatters//:srcs",
    ],
)

# erl_analyze(
#     name = "analyze",
#     hdrs = glob([
#         "include/**/*.hrl",
#         "src/**/*.hrl",
#     ]),
#     srcs = glob([
#         "src/**/*.erl",
#     ]),
#     suffix = "normal",
#     # dest = "src",
#     erlc_opts = ":erlc_opts",
# )

# erl_analyze(
#     name = "test_analyze",
#     hdrs = glob([
#         "include/**/*.hrl",
#         "src/**/*.hrl",
#     ]),
#     srcs = glob([
#         "src/**/*.erl",
#     ]),
#     suffix = "test",
#     erlc_opts = ":test_erlc_opts",
# )

erlc_opts_file(
    name = "erlc_opts_file",
    values = select({
        "@rules_erlang//:debug_build": [
            "+debug_info",
            "+recv_opt_info",
            "+warn_export_vars",
            "+warn_shadow_vars",
            "+warn_obsolete_guard",
        ],
        "//conditions:default": [
            "+debug_info",
            "+recv_opt_info",
            "+warn_export_vars",
            "+warn_shadow_vars",
            "+warn_obsolete_guard",
            "+deterministic",
        ],
    }),
    out = "erlc_opts_file_",
)

erlc_opts_file(
    name = "test_erlc_opts_file",
    values = select({
        "@rules_erlang//:debug_build": [
            "+debug_info",
            "-DTEST=1",
        ],
        "//conditions:default": [
            "+debug_info",
            "-DTEST=1",
            "+deterministic",
        ],
    }),
    out = "test_erlc_opts_file_",
)

app_src_from_erlang_mk_makefile(
    name = "app_src",
    srcs = glob(
        [
            "*.mk",
            "include/**/*",
            "src/**/*",
        ],
    ) + ["Makefile"],
    out = "src/%s.app.src" % NAME,
)

erlang_app_sources(
    name = "%s_srcs" % NAME,
    app_name = NAME,
    app_src = ":app_src",
    erlc_opts_file = ":erlc_opts_file",
    visibility = ["//visibility:public"],
)

erlang_app_sources(
    name = "test_%s_srcs" % NAME,
    app_name = NAME,
    app_src = ":app_src",
    erlc_opts_file = ":test_erlc_opts_file",
    visibility = ["//visibility:public"],
)

compile_many(
    name = "apps",
    apps = [
        ":%s_srcs" % NAME,
    ],
    erl_libs = [
        "@erlang_packages//:deps",
    ],
)

compile_many(
    name = "test_apps",
    apps = [
        ":test_%s_srcs" % NAME,
    ],
    testonly = True,
    erl_libs = [
        "@erlang_packages//:deps",
    ],
)

extract_app(
    name = "erlang_app",
    erl_libs = ":apps",
    app_name = NAME,
    visibility = ["//visibility:public"],
)

extract_app(
    name = "test_erlang_app",
    erl_libs = ":test_apps",
    app_name = NAME,
    beam_dest = "test",
    testonly = True,
)
