load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_erlang",
    sha256 = "a58ab84733ed3b43eda6a1c624edf04a0dac7cabdd2b4fcf84391ee8af969965",
    strip_prefix = "rules_erlang-2.2.1",
    urls = ["https://github.com/rabbitmq/rules_erlang/archive/refs/tags/2.2.1.zip"],
)

load("@rules_erlang//:rules_erlang.bzl", "rules_erlang_dependencies")

rules_erlang_dependencies()

load("@rules_erlang//:github.bzl", "github_erlang_app")
load("@rules_erlang//:hex_pm.bzl", "hex_pm_erlang_app")

hex_pm_erlang_app(
    name = "gen_batch_server",
    version = "0.8.7",
)

github_erlang_app(
    name = "seshat",
    extra_apps = [
        "sasl",
        "crypto",
    ],
    org = "rabbitmq",
    ref = "0.1.0",
    version = "0.1.0",
)

http_archive(
    name = "tls_gen",
    build_file_content = """
filegroup(
    name = "basic",
    srcs = glob(["common.mk", "basic/**/*", "tls_gen/**/*"]),
    visibility = ["//visibility:public"],
)
""",
    strip_prefix = "tls-gen-main",
    urls = ["https://github.com/michaelklishin/tls-gen/archive/refs/heads/main.zip"],
)
