load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "af87959afe497dc8dfd4c6cb66e1279cb98ccc84284619ebfec27d9c09a903de",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.2.0/bazel-skylib-1.2.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.2.0/bazel-skylib-1.2.0.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

http_archive(
    name = "io_buildbuddy_buildbuddy_toolchain",
    sha256 = "a2a5cccec251211e2221b1587af2ce43c36d32a42f5d881737db3b546a536510",
    strip_prefix = "buildbuddy-toolchain-829c8a574f706de5c96c54ca310f139f4acda7dd",
    urls = ["https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/829c8a574f706de5c96c54ca310f139f4acda7dd.tar.gz"],
)

load("@io_buildbuddy_buildbuddy_toolchain//:deps.bzl", "buildbuddy_deps")

buildbuddy_deps()

load("@io_buildbuddy_buildbuddy_toolchain//:rules.bzl", "buildbuddy")

buildbuddy(
    name = "buildbuddy_toolchain",
    llvm = True,
)

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "rbe",
    commit = "f68402af3e31018e8bbff1d24a5ccc43ca4ad4c6",  # linux-rbe branch
    remote = "https://github.com/rabbitmq/rbe-erlang-platform.git",
)

git_repository(
    name = "rules_erlang",
    remote = "https://github.com/rabbitmq/rules_erlang.git",
    tag = "3.2.0",
)

load(
    "@rules_erlang//:rules_erlang.bzl",
    "rules_erlang_dependencies",
)

rules_erlang_dependencies()

register_toolchains(
    "//bzl/toolchains:erlang_toolchain_external",
    "//bzl/toolchains:erlang_toolchain_23",
    "//bzl/toolchains:erlang_toolchain_24",
    "//bzl/toolchains:erlang_toolchain_25",
)

load("@rules_erlang//:hex_pm.bzl", "hex_pm_erlang_app")

hex_pm_erlang_app(
    name = "gen_batch_server",
    sha256 = "c3e6a1a2a0fb62aee631a98cfa0fd8903e9562422cbf72043953e2fb1d203017",
    version = "0.8.8",
)

hex_pm_erlang_app(
    name = "seshat",
    sha256 = "20d820acbeef9d07298ee863d0c9d06f8e620acba100939ebb2925e4d6b0dfc7",
    version = "0.3.2",
)

http_archive(
    name = "tls_gen",
    build_file_content = """
filegroup(
    name = "basic",
    srcs = glob(["common.mk", "basic/**/*", "tls_gen/**/*"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "cac7afd62f347f575141db3394ff04c9742a6f63b943ad9fc088280d2b751d6a",
    strip_prefix = "tls-gen-main",
    urls = ["https://github.com/rabbitmq/tls-gen/archive/refs/heads/main.zip"],
)
